--- a/influencer/assets/css/style.css
+++ b/influencer/assets/css/style.css
@@ -1,4 +1,37 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
   font-family: "Albert Sans", sans-serif;
+}
+.tiktok {
+  font-size: calc(
+    2.4rem + (5 - 2.4) * ((100vw - 20rem) / (48 - 20))
+  ) !important;
+  line-height: calc(
+    1.1 * (2.4rem + (5 - 2.4) * ((100vw - 20rem) / (48 - 20)))
+  ) !important;
+}
+.tiktoklorem {
+  font-size: calc(
+    1.14rem + (1.4 - 1.14) * ((100vw - 20rem) / (48 - 20))
+  ) !important;
+  line-height: calc(
+    1.4 * (1.14rem + (1.4 - 1.14) * ((100vw - 20rem) / (48 - 20)))
+  ) !important;
+}
+.getstartedfirst {
+  font-size: calc(
+    1.07rem + (1.2 - 1.07) * ((100vw - 20rem) / (48 - 20))
+  ) !important;
+  line-height: calc(
+    1.4 * (1.07rem + (1.2 - 1.07) * ((100vw - 20rem) / (48 - 20)))
+  ) !important;
+}
+
+.becameinfluencer {
+  font-size: calc(
+    2.05rem + (4 - 2.05) * ((100vw - 20rem) / (48 - 20))
+  ) !important;
+  line-height: calc(
+    1.3 * (2.05rem + (4 - 2.05) * ((100vw - 20rem) / (48 - 20)))
+  ) !important;
 }
