--- a/influencer/assets/css/style.css
+++ b/influencer/assets/css/style.css
@@ -35,3 +35,41 @@
     1.3 * (2.05rem + (4 - 2.05) * ((100vw - 20rem) / (48 - 20)))
   ) !important;
 }
+
+.influencergetstarted {
+  font-size: calc(
+    1.14rem + (1.4 - 1.14) * ((100vw - 20rem) / (48 - 20))
+  ) !important;
+  line-height: calc(
+    1.4 * (1.14rem + (1.4 - 1.14) * ((100vw - 20rem) / (48 - 20)))
+  ) !important;
+}
+.featuretext {
+  font-size: calc(1.07rem + (1.2 - 1.07) * ((100vw - 20rem) / (48 - 20)));
+  line-height: calc(
+    1.4 * (1.07rem + (1.2 - 1.07) * ((100vw - 20rem) / (48 - 20)))
+  );
+}
+
+.uniquecontenttext {
+  font-size: calc(
+    2.05rem + (4 - 2.05) * ((100vw - 20rem) / (48 - 20))
+  ) !important;
+  line-height: calc(
+    1.3 * (2.05rem + (4 - 2.05) * ((100vw - 20rem) / (48 - 20)))
+  ) !important;
+}
+.uniquecontentp {
+  font-size: calc(
+    1.14rem + (1.4 - 1.14) * ((100vw - 20rem) / (48 - 20))
+  ) !important;
+  line-height: calc(
+    1.4 * (1.14rem + (1.4 - 1.14) * ((100vw - 20rem) / (48 - 20)))
+  ) !important;
+}
+.uniquecontentbtn {
+  font-size: calc(1.14rem + (1.4 - 1.14) * ((100vw - 20rem) / (48 - 20))) !important;
+  line-height: calc(
+    1.4 * (1.14rem + (1.4 - 1.14) * ((100vw - 20rem) / (48 - 20)))
+  ) !important;
+}
