--- a/influencer/assets/css/style.css
+++ b/influencer/assets/css/style.css
@@ -84,11 +84,18 @@
   ) !important;
 }
 .creatermeeting {
-  font-size: calc(2.05rem + (4 - 2.05) * ((100vw - 20rem) / (48 - 20))) !important;
+  font-size: calc(
+    2.05rem + (4 - 2.05) * ((100vw - 20rem) / (48 - 20))
+  ) !important;
   line-height: calc(
     1.3 * (2.05rem + (4 - 2.05) * ((100vw - 20rem) / (48 - 20)))
   ) !important;
 }
-.createrlorem{
-  font-size: calc( 1.35rem + (2 - 1.35) * ((100vw - 20rem) / (48 - 20))) !important;
+.createrlorem {
+  font-size: calc(
+    1.35rem + (2 - 1.35) * ((100vw - 20rem) / (48 - 20))
+  ) !important;
+}
+.navstyle {
+  font-size: calc(1.35rem + (2 - 1.35) * ((100vw - 20rem) / (48 - 20)));
 }
